# didactic-spoon

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run_tests.sh
src/: CMakeLists.txt  atmosphere_m.f90  cartesian_system_m.f90  constants_m.f90  random_m.f90  statistics_m.f90  test_atmosphere.f90  test_cartesian_system.f90  test_random.f90  track_data_m.f90  vector_math_m.f90
